// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseSummary for plural expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
      expense
    s
      totalling 
    ₦5.50
  </h1>
</div>
`;

exports[`Should render ExpenseSummary for singular expense 1`] = `
<div>
  <h1>
    Viewing 
    1
      expense
      totalling 
    ₦10.00
  </h1>
</div>
`;
